@@ -32,6 +32,7 @@ Jython 2.5.2a1
     - [ 1390 ] ihooks fails due to unimplemented methods in imp module
     - [ 1456 ] sys.trace/profile attributes cause: AttributeError: write-only attr: trace in PyAMF
     - [ 1385 ] generator.throw uncaught on new generator doesn't stop the generator
+    - [ 1596 ] SynchronizedCallable does not report that it is callable [suggested fix]
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
